# RadiogenPDAC

./: .gitignore  README.md  pyproject.toml  requirements.txt
PDAC_Detection/: README.md
configs/model/: multiphase_encoder.yaml  multiphase_encoder_with_pdac_features.yaml
configs/train/: default.yaml
scripts/audit/: render_validation_case_trial.py
scripts/slurm/: arterial_250_fold0_baseline.sbatch  arterial_250_fold0_best_eval.sbatch  arterial_250_fold0_ft.sbatch  arterial_250_hybrid_artery_2gpu.sbatch  arterial_250_hybrid_artery_fold0_ft.sbatch  arterial_250_hybrid_artery_prep.sbatch  phase_eval.sbatch  phase_fold0_eval.sbatch  preprocess_array.sh  submit_eval_every_n_epochs.sh  train_ddp.sh  venous_full_fold0_baseline.sbatch  venous_full_fold0_ft.sbatch  venous_full_hybrid_artery_2gpu.sbatch  venous_full_hybrid_artery_fold0_ft.sbatch  venous_full_hybrid_vein_2gpu.sbatch  venous_full_hybrid_vein_fold0_ft.sbatch  venous_full_hybrid_vein_prep.sbatch  venous_full_refresh_manifests.sbatch  venous_smoke50_array.sbatch
src/radiogenpdac/: cli.py  config.py  datamodule.py  dataset.py  framework.py  ingestion.py  lightning_module.py  losses.py  manifests.py  model.py  pdac_encoder.py  preprocessing.py  splits.py  targets.py  train.py  training_monitor.py
templates/: cohort_manifest.example.csv  genomics_manifest.example.csv  phase_ingestion_manifest.example.csv
